--- a/default.hbs
+++ b/default.hbs
@@ -26,7 +26,7 @@
     {{ghost_head}}
   </head>
 
-  <body class="{{body_class}}">
+  <body class="{{body_class}} theme-base-0d layout-reverse">
 
     {{navigation}}
 
